# sjef

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  README.md  _locker_8h.html  _locker_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  backends_8md.html  bld.bat  classes.html  classsjef_1_1_locker-members.html  classsjef_1_1_locker.html  classsjef_1_1_logger-members.html  classsjef_1_1_logger.html  classsjef_1_1_project-members.html  classsjef_1_1_project.html  classsjef_1_1runtime__error.html  classsjef_1_1util_1_1_locker-members.html  classsjef_1_1util_1_1_locker.html  dir_0ca8cb75bad2b43c09109e28744b0edd.html  dir_1e2e9d7f74cdc78cb9e4e265186382a6.html  dir_26c9fe57a82176174923e1f815785e89.html  dir_29655acb90a63b4ddf8a19135bd29fb7.html  dir_3a0534501ca4be4079425efd3c8ffab8.html  dir_8226b776fb0ffa8d5b58d24e9c5d3a69.html  dir_cb77d1cf39701a4773fb82ebecfca907.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  (+33 more)
.github/workflows/: build-and-test.yml  docker-publish.yml  doxygen-gh-pages.yml  wheels.yml
cmake/: libconfig.cmake
dependencies/: CMakeLists.txt  README.md  check_commit.sh  checkout.sh  checkout_all.sh  pull.sh  update_SHA1.sh
docker/: Dockerfile
lib/: CMakeLists.txt  FileLock.cpp  FileLock.h  Lock.cpp  Lock.h  Locker.cpp  Locker.h  Logger.h  backends.md  dummy.cpp  sjef-backend.cpp  sjef-backend.h  sjef-c.cpp  sjef-c.h  sjef-customization.cpp  sjef-program.cpp  sjef-program.h  sjef.cpp  sjef.h
lib/util/: Command.cpp  Command.h  Job.cpp  Job.h  Job_server.cpp  Job_server.h  Logger.h  Shell.cpp  Shell.h  util.h
program/: CMakeLists.txt  main.cpp  osx-localize-binaries  sjef-program.cpp  sjef-program.h  sjef-program.md  uninstall.in
pysjef/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.rst  __init__.py  _setup.py  build.bat  build.sh  container.py  create_conda_env.sh  fix_configuration.py  project.py  pyproject.toml  pyproject.toml.in  requirements.txt  select.py  setup.py
pysjef/conda-recipe/: bld.bat  build.sh  meta.yaml
pysjef/docs/: conf.py  containers.rst  developers.rst  index.rst  installation.rst  overview.rst  project.rst  select.rst  tree_view.rst
pysjef/pysjef/: __init__.py  node.py  node_xml.py  project.py  project_factory.py  project_wrapper.pxd  project_wrapper.pyx  tree_view.py
pysjef/python/: node.py
pysjef/test/: test_run.py  test_select.py
pysjef_molpro/: .gitignore  build.sh
pysjef_molpro/pysjef_molpro/: project.py
python/test/: test_run.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_1.js  files_2.js  (+36 more)
src/: CMakeLists.txt  backends.md
src/pysjef/: project.py  project_wrapper.pxd  project_wrapper.pyx  settings.py
src/pysjef/test/: test_tree_view.py  tree_3lvl.py
src/sjef/: CMakeLists.txt  backend-config.cpp  backend-config.h  backends.md  dummy.cpp  sjef-backend.cpp  sjef-backend.h  sjef-c.cpp  sjef-c.h  sjef-customization.cpp  sjef-program.cpp  sjef.cpp  sjef.h
src/sjef/util/: Job.cpp  Job.h  Locker.cpp  Locker.h  Logger.h  Shell.cpp  Shell.h  util.h
test/: CMakeLists.txt  logger.cpp  test-Command.cpp  test-FileLock.cpp  test-Lock.cpp  test-Locker.cpp  test-Shell.cpp  test-backend-config.cpp  test-c-sjef-backend.c  test-sjef-c.cpp  test-sjef-molpro.cpp  test-sjef.cpp  test-sjef.h  test_spaces.sh
test/He.molpro/: He.inp  He.out  He.xml  Info.plist
test/He.molpro/run/1.molpro/: .Info.plist.writing_object  1.out  1.xml  Info.plist
